--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ nav {
     flex-direction: column;
     align-items: center;
     transform: translateX(100%);
+    transition: transform 0.5s ease-in;
   }
   .nav-links li {
     opacity: 0;
@@ -72,4 +73,7 @@ nav {
   .burger {
     display: block;
   }
+}
+.nav-active {
+  transform: translateX(0%);
 }
