--- a/style.css
+++ b/style.css
@@ -77,3 +77,13 @@ nav {
 .nav-active {
   transform: translateX(0%);
 }
+@keyframes navLinkFade {
+  from {
+    opacity: 0;
+    transform: translateX(50px);
+  }
+  to {
+    opacity: 50;
+    transform: translateX(0px);
+  }
+}
